updated language and modal styles

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- Шапка -->
+    <!-- HEADER -->
     <header class="header">
       <div class="container header__container">
         <nav class="nav">
@@ -32,13 +32,13 @@
           </button>
           <ul class="nav__list">
             <li class="nav__item">
-              <a class="nav__item--current" href="index.html">Студія</a>
+              <a class="nav__item--current" href="index.html">Studio</a>
             </li>
             <li class="nav__item">
-              <a href="./portfolio.html">Портфоліо</a>
+              <a href="./portfolio.html">Portfolio</a>
             </li>
             <li class="nav__item">
-              <a href="#">Контакти</a>
+              <a href="#">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -62,19 +62,19 @@
         </ul>
       </div>
     </header>
-    <!-- Основний контент сторінки -->
+    <!-- The main content of the page-->
     <main>
-      <!-- Герой -->
+      <!-- HERO -->
       <section class="hero">
         <div class="container">
-          <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
-          <button data-modal-open class="hero__button" type="button">Замовити послугу</button>
+          <h1 class="hero__title">Effective solutions for your business</h1>
+          <button data-modal-open class="hero__button" type="button">Order a service</button>
         </div>
       </section>
-      <!--  Особливості -->
+      <!-- Oportunities -->
       <section class="oportunities section">
         <div class="container">
-          <h2 class="section-title visually-hidden">Наші особливості</h2>
+          <h2 class="section-title visually-hidden">Our oportunities</h2>
           <ul class="oportunities__list">
             <li class="oportunities__item">
               <span class="oportunities__img">
@@ -82,9 +82,9 @@
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </span>
-              <h3 class="oportunities__title">Увага до деталей</h3>
+              <h3 class="oportunities__title">Attention to details</h3>
               <p class="oportunities__text">
-                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+                Ideological considerations, and even the beginning of daily work on forming a position.
               </p>
             </li>
             <li class="oportunities__item">
@@ -93,9 +93,9 @@
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </span>
-              <h3 class="oportunities__title">Пунктуальність</h3>
+              <h3 class="oportunities__title">Punctuality</h3>
               <p class="oportunities__text">
-                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+                The task of the organization, especially the framework and the place of personnel training, attracts.
               </p>
             </li>
             <li class="oportunities__item">
@@ -104,9 +104,9 @@
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </span>
-              <h3 class="oportunities__title">Планування</h3>
+              <h3 class="oportunities__title">Planning</h3>
               <p class="oportunities__text">
-                Так само консультація з широким активом значною мірою зумовлює.
+                Likewise, consultation with a broad asset largely determines.
               </p>
             </li>
             <li class="oportunities__item">
@@ -115,19 +115,19 @@
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </span>
-              <h3 class="oportunities__title">Сучасні технології</h3>
+              <h3 class="oportunities__title">Modern technology</h3>
               <p class="oportunities__text">
-                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+                The importance of these problems is so obvious, the implementation of planned tasks.
               </p>
             </li>
           </ul>
         </div>
       </section>
 
-      <!-- Чим ми займаємося -->
+      <!-- Our work -->
       <section class="our-work our-work__section">
         <div class="container">
-          <h2 class="section-title">Чим ми займаємося</h2>
+          <h2 class="section-title">Our work</h2>
           <ul class="our-work__list">
             <li class="our-work__item">
               <picture>
@@ -152,14 +152,11 @@
                   loading="lazy"
                   class="picture"
                   src="./images/keyboard.jpg"
-                  alt="Людина
-                  працює
-                  за
-                  монітором"
+                  alt="Man works by monitor"
                 />
               </picture>
               <div class="our-work__wrap">
-                <p class="our-work__text">Десктопні додатки</p>
+                <p class="our-work__text">Desktop applications</p>
               </div>
             </li>
             <li class="our-work__item">
@@ -185,14 +182,11 @@
                   loading="lazy"
                   class="picture"
                   src="./images/phone.jpg"
-                  alt="Людина
-                  працює
-                  за
-                  телефоном"
+                  alt="Man working by phone"
                 />
               </picture>
               <div class="our-work__wrap">
-                <p class="our-work__text">Мобільні додатки</p>
+                <p class="our-work__text">Mobile applications</p>
               </div>
             </li>
             <li class="our-work__item">
@@ -218,25 +212,22 @@
                   loading="lazy"
                   class="picture"
                   src="./images/tablet.jpg"
-                  alt="Людина
-                  працює
-                  за
-                  планшетом"
+                  alt="Man working by tablet"
                 />
               </picture>
               <div class="our-work__wrap">
-                <p class="our-work__text">Дизайнерські рішення</p>
+                <p class="our-work__text">Design solutions</p>
               </div>
             </li>
           </ul>
         </div>
       </section>
 
-      <!-- Наша команда -->
+      <!-- Our team -->
 
       <section class="team section team__section">
         <div class="container">
-          <h2 class="section-title">Наша команда</h2>
+          <h2 class="section-title">Our team</h2>
           <ul class="team__list">
             <li class="team__item">
               <picture>
@@ -289,11 +280,11 @@
                   loading="lazy"
                   class="picture"
                   src="./images/developer1.jpg"
-                  alt="Чоловік, який посміхається, у темній сорочці та окулярах"
+                  alt="A smiling man in a dark shirt and glasses."
                 />
               </picture>
               <div class="team__meta">
-                <h3 class="team__name">Ігор Дем'яненко</h3>
+                <h3 class="team__name">Ihor Demyanenko</h3>
                 <p class="team__position">Product Designer</p>
                 <ul class="team__icon-list">
                   <li>
@@ -378,11 +369,11 @@
                   loading="lazy"
                   class="picture"
                   src="./images/developer2.jpg"
-                  alt="Дівчина, яка посміхається"
+                  alt="A girl smiles."
                 />
               </picture>
               <div class="team__meta">
-                <h3 class="team__name">Ольга Рєпіна</h3>
+                <h3 class="team__name">Olga Repina</h3>
                 <p class="team__position">Frontend Developer</p>
                 <ul class="team__icon-list">
                   <li>
@@ -467,11 +458,11 @@
                   loading="lazy"
                   class="picture"
                   src="./images/developer3.jpg"
-                  alt="Xлопець, що посміхається"
+                  alt="A boy smiles."
                 />
               </picture>
               <div class="team__meta">
-                <h3 class="team__name">Микола Тарасов</h3>
+                <h3 class="team__name">Mykola Tarasov</h3>
                 <p class="team__position">Marketing</p>
                 <ul class="team__icon-list">
                   <li>
@@ -556,11 +547,11 @@
                   loading="lazy"
                   class="picture"
                   src="./images/developer4.jpg"
-                  alt="Xлопець, що посміхається"
+                  alt="Smiling man"
                 />
               </picture>
               <div class="team__meta">
-                <h3 class="team__name">Михайло Єрмаков</h3>
+                <h3 class="team__name">Mykhailo Yermakov</h3>
                 <p class="team__position">UI Designer</p>
                 <ul class="team__icon-list">
                   <li>
@@ -598,10 +589,12 @@
         </div>
       </section>
 
-      <!-- Постійні клієнти -->
+
+      <!-- Our clients -->
+
       <section class="clients section">
         <div class="container">
-          <h2 class="section-title">Постійні клієнти</h2>
+          <h2 class="section-title">Our clients</h2>
           <ul class="clients__list">
             <li class="clients__item">
               <a class="clients__link" href="#">
@@ -662,7 +655,7 @@
       </section>
     </main>
 
-    <!-- Футер -->
+    <!-- Footer -->
 
     <footer class="footer footer__section">
       <div class="container footer__container">
@@ -679,7 +672,7 @@
                     href="https://www.google.com.ua/maps/search/%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26/@50.4265807,30.5361971,17z?hl"
                     target="_blank"
                     rel="noopener noreferrer nofollow"
-                    >м. Київ, пр-т Лесі Українки, 26</a
+                    >Kyiv, Lesya Ukrainky Ave., 26</a
                   >
                 </li>
                 <li class="footer-contact__item">
@@ -692,7 +685,7 @@
             </address>
           </div>
           <div class="footer-join footer-join__section">
-            <p class="footer-join__text">Приєднуйтесь</p>
+            <p class="footer-join__text">Join us</p>
             <ul class="footer-join__list">
               <li>
                 <a class="footer-join__icon-wrap" href="#">
@@ -726,7 +719,7 @@
           </div>
         </div>
         <form class="footer-form__section">
-          <p class="footer-form__text">Підпишіться на розсилку</p>
+          <p class="footer-form__text">Subscribe for the news</p>
           <div class="footer-form__email-section">
             <input
               type="email"
@@ -736,7 +729,7 @@
               placeholder="E-mail"
             />
             <button class="footer-form__button" type="submit">
-              Підписатися
+              Subscribe
               <svg class="footer-join__icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
@@ -745,6 +738,7 @@
         </form>
       </div>
     </footer>
+
 
     <!-- Modal -->
 
@@ -755,43 +749,37 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <h2 class="modal-form__title">Залиште свої дані, ми вам передзвонимо</h2>
+        <h2 class="modal-form__title">Leave your contacts, we will call you back</h2>
         <form name="contact-form" class="modal-form modal-form__contact">
-          <label class="modal-form__label" for="person-name"
-            >Ім'я
-            <span class="modal-form__input-wrap">
-              <input class="modal-form__input" id="person-name" type="text" name="person-name" />
-              <svg class="modal-form__icon" width="18" height="18">
-                <use href="./images/icons.svg#icon-person"></use>
-              </svg>
-            </span>
-          </label>
-          <label class="modal-form__label" for="person-phone"
-            >Телефон
-            <span class="modal-form__input-wrap">
-              <input class="modal-form__input" id="person-phone" type="tel" name="person-phone" />
-              <svg class="modal-form__icon" width="18" height="18">
-                <use href="./images/icons.svg#icon-phone"></use>
-              </svg>
-            </span>
-          </label>
-
-          <label class="modal-form__label" for="person-mail"
-            >Пошта
-            <span class="modal-form__input-wrap">
-              <input class="modal-form__input" id="person-mail" type="email" name="person-mail" />
-              <svg class="modal-form__icon" width="18" height="18">
-                <use href="./images/icons.svg#icon-email"></use>
-              </svg>
-            </span>
-          </label>
-          <label class="modal-form__label" for="person-comment">Коментар</label>
-          <textarea
-            placeholder="Введіть текст..."
-            class="modal-form__textarea"
-            id="person-comment"
-            name="person-comment"
-          ></textarea>
+          <div class="modal-form__contact-wrap">
+            <label class="modal-form__label" for="person-name">Name
+              <span class="modal-form__input-wrap">
+                <input class="modal-form__input" id="person-name" type="text" name="person-name" />
+                <svg class="modal-form__icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-person"></use>
+                </svg>
+              </span>
+            </label>
+            <label class="modal-form__label" for="person-phone">Phone number
+              <span class="modal-form__input-wrap">
+                <input class="modal-form__input" id="person-phone" type="tel" name="person-phone" />
+                <svg class="modal-form__icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-phone"></use>
+                </svg>
+              </span>
+            </label>
+            
+            <label class="modal-form__label" for="person-mail">Email
+              <span class="modal-form__input-wrap">
+                <input class="modal-form__input" id="person-mail" type="email" name="person-mail" />
+                <svg class="modal-form__icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-email"></use>
+                </svg>
+              </span>
+            </label>
+            <label class="modal-form__label" for="person-comment">Comment</label>
+            <textarea placeholder="Enter text..." class="modal-form__textarea" id="person-comment" name="person-comment"></textarea>
+          </div>
           <div class="modal-form__terms-wrap">
             <label class="modal-form__terms-label" for="terms-checkbox">
               <span class="checkbox">
@@ -811,33 +799,34 @@
                   <use href="./images/icons.svg#icon-check3"></use>
                 </svg>
               </span>
-              Погоджуюся з розсилкою та приймаю
+              I accept the
             </label>
-            <a class="modal-form__terms-link" href="#">Умови договору</a>
+            <a class="modal-form__terms-link" href="#">terms of services.</a>
           </div>
-          <button class="modal__button" type="submit">Відправити</button>
+          <button class="modal__button" type="submit">Submit</button>
         </form>
       </div>
     </div>
+
 
     <!-- Mobile-menu -->
 
     <div class="mobile-menu__container js-menu-container">
       <button class="mobile-menu__close-button js-close-menu" type="button">
-        <svg width="40" height="40" aria-label="Перемикач мобільного меню">
+        <svg width="40" height="40" aria-label="Mobile menu switch">
           <use href="./images/icons.svg#icon-menu-close"></use>
         </svg>
       </button>
       <div class="mobile-menu__wrap">
         <ul class="mobile-menu">
           <li class="mobile-menu__item mobile-menu__item--current">
-            <a href="./index.html" class="mobile-menu__link mobile-menu__link--current">Студія</a>
+            <a href="./index.html" class="mobile-menu__link mobile-menu__link--current">Studio</a>
           </li>
           <li class="mobile-menu__item">
-            <a href="./portfolio.html" class="mobile-menu__link">Портфоліо</a>
+            <a href="./portfolio.html" class="mobile-menu__link">Portfolio</a>
           </li>
           <li class="mobile-menu__item">
-            <a href="#" class="mobile-menu__link">Контакти</a>
+            <a href="#" class="mobile-menu__link">Contacts</a>
           </li>
         </ul>
       </div>
