--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- Шапка -->
+    <!-- Header -->
     <header class="header">
       <div class="container header__container">
         <nav class="nav">
@@ -32,13 +32,13 @@
           </button>
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="index.html">Студія</a>
+              <a href="index.html">Studio</a>
             </li>
             <li class="nav__item">
-              <a class="nav__item--current" href="./portfolio.html">Портфоліо</a>
+              <a class="nav__item--current" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="nav__item">
-              <a href="#">Контакти</a>
+              <a href="#">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -63,39 +63,37 @@
       </div>
     </header>
 
-    <!-- Основний контент сторінки -->
+    <!-- The main content of the page -->
 
     <main>
       <section class="section">
         <div class="container">
-          <h1 class="portfolio__title visually-hidden">Портфоліо</h1>
+          <h1 class="portfolio__title visually-hidden">Portfolio</h1>
           <ul class="portfolio__button-list">
             <li>
               <button class="portfolio__button portfolio__button--current" type="button">
-                Усі
+              All
               </button>
             </li>
-            <li><button class="portfolio__button" type="button">Веб-сайти</button></li>
-            <li><button class="portfolio__button" type="button">Додатки</button></li>
-            <li><button class="portfolio__button" type="button">Дизайн</button></li>
-            <li><button class="portfolio__button" type="button">Маркетинг</button></li>
+            <li><button class="portfolio__button" type="button">Websites</button></li>
+            <li><button class="portfolio__button" type="button">Applications</button></li>
+            <li><button class="portfolio__button" type="button">Design</button></li>
+            <li><button class="portfolio__button" type="button">Marketing</button></li>
           </ul>
           <ul class="card__list">
             <li class="card">
               <a class="card__link" href="#">
                 <div class="card__description">
-                  <img src="./images/prtf1.jpg" alt="Приклад вебсайту" />
+                  <img src="./images/prtf1.jpg" alt="An example of a website" />
                   <div class="card__text-wrap">
                     <p class="card__text">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                      приватну особу.
+                      The resource offers complex offers with different levels of functionality and services. All this will allow the visitor to get comprehensive information about the company or private person
                     </p>
                   </div>
                 </div>
                 <div class="card__meta">
-                  <h2 class="card__name">Технокряк</h2>
-                  <p class="card__type">Веб-сайт</p>
+                  <h2 class="card__name">Technocrack</h2>
+                  <p class="card__type">Website</p>
                 </div>
               </a>
             </li>
@@ -103,18 +101,17 @@
             <li class="card">
               <a class="card__link" href="#">
                 <div class="card__description">
-                  <img src="./images/prtf2.jpg" alt="Приклад вебсайту" width="370" />
+                  <img src="./images/prtf2.jpg" alt="An example of a website" width="370" />
                   <div class="card__text-wrap">
                     <p class="card__text">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                      приватну особу.
+                      The resource offers complex offers with different levels of functionality and services. All this will allow the
+                      visitor to get comprehensive information about the company or private person
                     </p>
                   </div>
                 </div>
                 <div class="card__meta">
-                  <h2 class="card__name">Постер New Orlean vs Golden Star</h2>
-                  <p class="card__type">Дизайн</p>
+                  <h2 class="card__name">Poster New Orlean vs Golden Star</h2>
+                  <p class="card__type">Design</p>
                 </div>
               </a>
             </li>
@@ -122,18 +119,17 @@
             <li class="card">
               <a class="card__link" href="#">
                 <div class="card__description">
-                  <img src="./images/prtf3.jpg" alt="Приклад вебсайту" width="370" />
+                  <img src="./images/prtf3.jpg" alt="An example of a website" width="370" />
                   <div class="card__text-wrap">
                     <p class="card__text">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                      приватну особу.
+                      The resource offers complex offers with different levels of functionality and services. All this will allow the
+                      visitor to get comprehensive information about the company or private person
                     </p>
                   </div>
                 </div>
                 <div class="card__meta">
-                  <h2 class="card__name">Ресторан Seafood</h2>
-                  <p class="card__type">Додаток</p>
+                  <h2 class="card__name">Restaurant Seafood</h2>
+                  <p class="card__type">Application</p>
                 </div>
               </a>
             </li>
@@ -141,18 +137,17 @@
             <li class="card">
               <a class="card__link" href="#">
                 <div class="card__description">
-                  <img src="./images/prtf4.jpg" alt="Навушники" width="370" />
+                  <img src="./images/prtf4.jpg" alt="Headphones" width="370" />
                   <div class="card__text-wrap">
                     <p class="card__text">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                      приватну особу.
+                      The resource offers complex offers with different levels of functionality and services. All this will allow the
+                      visitor to get comprehensive information about the company or private person
                     </p>
                   </div>
                 </div>
                 <div class="card__meta">
-                  <h2 class="card__name">Проєкт Prime</h2>
-                  <p class="card__type">Маркетинг</p>
+                  <h2 class="card__name">Project Prime</h2>
+                  <p class="card__type">Marketing</p>
                 </div>
               </a>
             </li>
@@ -160,18 +155,17 @@
             <li class="card">
               <a class="card__link" href="#">
                 <div class="card__description">
-                  <img src="./images/prtf5.jpg" alt="Коробки" width="370" />
+                  <img src="./images/prtf5.jpg" alt="Boxes" width="370" />
                   <div class="card__text-wrap">
                     <p class="card__text">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                      приватну особу.
+                      The resource offers complex offers with different levels of functionality and services. All this will allow the
+                      visitor to get comprehensive information about the company or private person
                     </p>
                   </div>
                 </div>
                 <div class="card__meta">
-                  <h2 class="card__name">Проєкт Boxes</h2>
-                  <p class="card__type">Додаток</p>
+                  <h2 class="card__name">Project Boxes</h2>
+                  <p class="card__type">Application</p>
                 </div>
               </a>
             </li>
@@ -179,18 +173,17 @@
             <li class="card">
               <a class="card__link" href="#">
                 <div class="card__description">
-                  <img src="./images/prtf6.jpg" alt="Монітор" width="370" />
+                  <img src="./images/prtf6.jpg" alt="Monitor" width="370" />
                   <div class="card__text-wrap">
                     <p class="card__text">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                      приватну особу.
+                      The resource offers complex offers with different levels of functionality and services. All this will allow the
+                      visitor to get comprehensive information about the company or private person
                     </p>
                   </div>
                 </div>
                 <div class="card__meta">
                   <h2 class="card__name">Inspiration has no Borders</h2>
-                  <p class="card__type">Веб-сайт</p>
+                  <p class="card__type">Website</p>
                 </div>
               </a>
             </li>
@@ -198,18 +191,17 @@
             <li class="card">
               <a class="card__link" href="#">
                 <div class="card__description">
-                  <img src="./images/prtf7.jpg" alt="Книга" width="370" />
+                  <img src="./images/prtf7.jpg" alt="Book" width="370" />
                   <div class="card__text-wrap">
                     <p class="card__text">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                      приватну особу.
+                      The resource offers complex offers with different levels of functionality and services. All this will allow the
+                      visitor to get comprehensive information about the company or private person
                     </p>
                   </div>
                 </div>
                 <div class="card__meta">
-                  <h2 class="card__name">Видання Limited Edition</h2>
-                  <p class="card__type">Дизайн</p>
+                  <h2 class="card__name">Bookstore Limited Edition</h2>
+                  <p class="card__type">Design</p>
                 </div>
               </a>
             </li>
@@ -217,18 +209,17 @@
             <li class="card">
               <a class="card__link" href="#">
                 <div class="card__description">
-                  <img src="./images/prtf8.jpg" alt="Бірка" width="370" />
+                  <img src="./images/prtf8.jpg" alt="Tag" width="370" />
                   <div class="card__text-wrap">
                     <p class="card__text">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                      приватну особу.
+                      The resource offers complex offers with different levels of functionality and services. All this will allow the
+                      visitor to get comprehensive information about the company or private person
                     </p>
                   </div>
                 </div>
                 <div class="card__meta">
-                  <h2 class="card__name">Проєкт LAB</h2>
-                  <p class="card__type">Маркетинг</p>
+                  <h2 class="card__name">Project LAB</h2>
+                  <p class="card__type">Marketing</p>
                 </div>
               </a>
             </li>
@@ -236,18 +227,17 @@
             <li class="card">
               <a class="card__link" href="#">
                 <div class="card__description">
-                  <img src="./images/prtf9.jpg" alt="Ноутбук" width="370" />
+                  <img src="./images/prtf9.jpg" alt="Notebook" width="370" />
                   <div class="card__text-wrap">
                     <p class="card__text">
-                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
-                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
-                      приватну особу.
+                      The resource offers complex offers with different levels of functionality and services. All this will allow the
+                      visitor to get comprehensive information about the company or private person
                     </p>
                   </div>
                 </div>
                 <div class="card__meta">
                   <h2 class="card__name">Growing Business</h2>
-                  <p class="card__type">Додаток</p>
+                  <p class="card__type">Application</p>
                 </div>
               </a>
             </li>
@@ -256,7 +246,7 @@
       </section>
     </main>
 
-    <!-- Футер -->
+    <!-- Footer -->
 
     <footer class="footer footer__section">
       <div class="container footer__container">
@@ -273,7 +263,7 @@
                     href="https://www.google.com.ua/maps/search/%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26/@50.4265807,30.5361971,17z?hl"
                     target="_blank"
                     rel="noopener noreferrer nofollow"
-                    >м. Київ, пр-т Лесі Українки, 26</a
+                    >Kyiv, Lesya Ukrainky Ave., 26</a
                   >
                 </li>
                 <li class="footer-contact__item">
@@ -286,7 +276,7 @@
             </address>
           </div>
           <div class="footer-join footer-join__section">
-            <p class="footer-join__text">Приєднуйтесь</p>
+            <p class="footer-join__text">Join us</p>
             <ul class="footer-join__list">
               <li>
                 <a class="footer-join__icon-wrap" href="#">
@@ -320,7 +310,7 @@
           </div>
         </div>
         <form class="footer-form__section">
-          <p class="footer-form__text">Підпишіться на розсилку</p>
+          <p class="footer-form__text">Subscribe for the news</p>
           <div class="footer-form__email-section">
             <input
               type="email"
@@ -330,7 +320,7 @@
               placeholder="E-mail"
             />
             <button class="footer-form__button" type="submit">
-              Підписатися
+              Subscribe
               <svg class="footer-join__icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
@@ -345,18 +335,23 @@
           <use href="./images/icons.svg#icon-menu-close"></use>
         </svg>
       </button>
+
+
+      <!-- Mobile-menu -->
+
+
       <div class="mobile-menu__wrap">
         <ul class="mobile-menu">
           <li class="mobile-menu__item">
-            <a href="./index.html" class="mobile-menu__link">Студія</a>
+            <a href="./index.html" class="mobile-menu__link">Studio</a>
           </li>
           <li class="mobile-menu__item mobile-menu__item--current">
             <a href="./portfolio.html" class="mobile-menu__link mobile-menu__link--current"
-              >Портфоліо</a
+              >Portfolio</a
             >
           </li>
           <li class="mobile-menu__item">
-            <a href="#" class="mobile-menu__link">Контакти</a>
+            <a href="#" class="mobile-menu__link">Contacts</a>
           </li>
         </ul>
       </div>
